--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 	</dependencies>
 
